<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/action_bar_height"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/nv_title"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/red_xuanwen"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_back"
                style="@style/back_red_style"
                android:drawableLeft="@drawable/arrow_left_white" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/find_password_title"
                android:textColor="@color/white"
                android:textSize="@dimen/logintitle" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/one_px"
            android:background="@color/flag_content_dividing_line" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp" 
        android:gravity="bottom"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_password_telephon_now"
            android:textSize="13dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/editheight"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/register_edittext_bg"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/et_email"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:hint="@string/find_password_email_account_hint"
            android:inputType="textEmailAddress"
            android:singleLine="true" >
        </EditText>
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/editheight"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/to_find_ok"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_red_login"
            android:text="@string/find_password_telephon_ok"
            android:textColor="@color/white"
            android:textSize="@dimen/login_size_btn" >
        </Button>
    </LinearLayout>

</LinearLayout>