<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/controlsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="8dp" >

        <Button
            android:id="@+id/video_recordbtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_light"
            android:text="@string/video_record_start" />
        
        <Button
            android:id="@+id/video_cancelbtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_light"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/video_record_previewbtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_light"
            android:text="@string/video_record_preview" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/video_size_spinner_lo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/controlsLayout"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp" >

        <TextView
            android:id="@+id/video_record_resolution_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:text="@string/video_record_resolution" />

        <Spinner
            android:id="@+id/video_record_spinner"
            android:layout_toRightOf="@+id/video_record_resolution_hint"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:layout_height="40dp"
            android:paddingRight="60dp"
            android:background="@android:color/white" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignRight="@+id/video_record_spinner"
            android:src="@drawable/arrow_down" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/video_record_record_lo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/video_size_spinner_lo"
        android:background="#000000" >

        <com.skd.androidrecording.video.AdaptiveSurfaceView
            android:id="@+id/videoView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <TextView
            android:id="@+id/video_record_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:background="@color/gray"
            android:text="0K/15M  0:0:0" />

    </RelativeLayout>

</RelativeLayout>
