<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/action_bar_height"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/nv_title"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/blue"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_back"
                style="@style/back_gray_style"
                android:drawableLeft="@drawable/arrow_left_white" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/bind_phone_number_title"
                android:textColor="@color/white"
                android:textSize="@dimen/logintitle" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/one_px"
            android:background="@color/flag_content_dividing_line" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/editheight"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="@dimen/editheight"
        android:background="@drawable/editbackground"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/bind_telephon"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:hint="@string/register_telephon_account_hint"
            android:numeric="integer"
            android:singleLine="true" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/editheight"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/editheight"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/editbackground"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/bind_security_code"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:hint="@string/register_telephon_code_hint"
                android:numeric="integer"
                android:singleLine="true" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="@dimen/editheight"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:textColor="@color/blue"
                android:textSize="18dp"
                android:text="" />

            <Button
                android:id="@+id/security_code"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/editheight"
                android:background="@drawable/login_bt_bg"
                android:text="@string/register_telephon_get_code"
                android:textColor="@color/white"
                android:textSize="18dp" >
            </Button>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/editheight"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bind_mobile"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/register_email_btn_bg"
            android:text="@string/bind_phone_number"
            android:textColor="@color/white"
            android:textSize="25dp" >
        </Button>
    </LinearLayout>


</LinearLayout>