<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/contact_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/action_bar_height"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/nv_title"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/red_xuanwen"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_back"
                style="@style/back_red_style"
                android:drawableLeft="@drawable/arrow_left_white" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/register_email_title"
                android:textColor="@color/white"
                android:textSize="@dimen/logintitle" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/one_px"
            android:background="@color/flag_content_dividing_line" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="@dimen/editheight"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/editheight"
            android:background="@drawable/register_edittext_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/email_account"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:hint="@string/register_email_account_hint"
                android:singleLine="true"
                android:textSize="@dimen/login_Size_edittext" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/editheight"
            android:layout_marginTop="20dp"
            android:background="@drawable/register_edittext_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/email_password"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:hint="@string/register_email_password_hint"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="@dimen/login_Size_edittext" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/editheight"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/register_email"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/btn_red_login"
                android:text="@string/register_email_now"
                android:textColor="@color/white"
                android:textSize="@dimen/login_size_btn" >
            </Button>
        </LinearLayout>
    </LinearLayout>
 <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/editheight"
        android:gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >
        
        <CheckBox
            android:id="@+id/register_checkBox"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:checked="false"
            android:button="@null"
            android:text="" />
        
        <TextView
            android:id="@+id/agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:textSize="13dp"
            android:text="" />

        </LinearLayout>
</LinearLayout>